--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,18 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-### Intellij IDEA ###
+.gradle
+/build/
+/out
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 application.properties
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+generated
 
 # AWS User-specific
 .idea/**/aws.xml
