--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,19 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,java,macos,intellij
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,java,macos,intellij
+# Created by https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij,gradle
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-.gradle
-/build/
-!gradle/wrapper/gradle-wrapper.jar
-/out
-
-generated
-
 ###IntelliJ IDEA ###
 application.properties
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
 # AWS User-specific
 .idea/**/aws.xml
@@ -44,14 +38,14 @@ application.properties
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
- .idea/artifacts
- .idea/compiler.xml
- .idea/jarRepositories.xml
- .idea/modules.xml
- .idea/*.iml
- .idea/modules
- *.iml
- *.ipr
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
 
 # CMake
 cmake-build-*/
@@ -92,10 +86,10 @@ fabric.properties
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
- *.iml
- modules.xml
- .idea/misc.xml
- *.ipr
+# *.iml
+# modules.xml
+# .idea/misc.xml
+# *.ipr
 
 # Sonarlint plugin
 # https://plugins.jetbrains.com/plugin/7973-sonarlint
@@ -149,63 +143,38 @@ fabric.properties
 hs_err_pid*
 replay_pid*
 
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+### Gradle ###
+.gradle
+**/build/
+!src/**/build/
 
-# Icon must end with two \r
-Icon
+# Ignore Gradle GUI config
+gradle-app.setting
 
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
-# Thumbnails
-._*
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+# Cache of project
+.gradletasknamecache
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
-### macOS Patch ###
-# iCloud generated files
-*.icloud
+### Gradle Patch ###
+# Java heap dump
+*.hprof
 
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
+# End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
 
-# Dump file
-*.stackdump
+### application.properties파일
+/src/main/resources/application.properties
 
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# End of https://www.toptal.com/developers/gitignore/api/windows,java,macos,intellij
+/db
+docker-compose.yml
+.idea
